#779: Allow @Step annotation on PageObject constructors so that intitial page steps can be recorded on Test Manager